RESOLVED FIXED242577
Dynamically inserted image analysis context menu items are missing when long pressing image links
https://bugs.webkit.org/show_bug.cgi?id=242577
Summary Dynamically inserted image analysis context menu items are missing when long ...
Wenson Hsieh
Reported 2022-07-10 12:29:57 PDT
"Look Up", "Show Text", "Copy Subject" and MRC menu items should show up when long pressing image links (images inside anchor tags).
Attachments
Radar WebKit Bug Importer
Comment 1 2022-07-10 12:30:22 PDT
Wenson Hsieh
Comment 2 2022-07-10 13:00:44 PDT
EWS
Comment 3 2022-07-11 13:42:43 PDT
Committed 252356@main (24deb829fd30): <https://commits.webkit.org/252356@main> Reviewed commits have been landed. Closing PR #2277 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.